MULE-10126: ArtifactClassLoaderRunner - Add support for artifacts with different versions (#3236)